add dgvoodoo features

--- a/metadata/com.projectrk.launcher.dgVoodooCpl.desktop
+++ b/metadata/com.projectrk.launcher.dgVoodooCpl.desktop
@@ -2,7 +2,7 @@
 Version=1.0
 Type=Application
 
-Name=Project Rubi-Ka (DGV Control)
+Name=Project RK (DGV Control)
 Comment=dgVoodoo Control Panel (Project Rubi-Ka)
 Categories=Game;RolePlaying;
 
