--- a/com.projectrk.launcher.yml
+++ b/com.projectrk.launcher.yml
@@ -16,14 +16,12 @@ finish-args:
   - --share=ipc
   - --share=network
 
-  - --socket=wayland
-  - --socket=x11
+  - --socket=x11 # These versions of wine/proton are not compiled with the wayland drivers. This may change in the future, but for now it's fine since most distros run xWayland.
   - --socket=pulseaudio
 
   # Wine uses UDisks2 to enumerate disk drives
   - --system-talk-name=org.freedesktop.UDisks2
   # Required for bwrap to work
-  - --talk-name=org.freedesktop.portal.Background
   - --talk-name=org.freedesktop.Notifications
   - --talk-name=org.kde.StatusNotifierWatcher
 
